[workspace]
members=[
    "app",
    "c_from_rust",
    "complex",
    "dining_philosophers",
    "hello_actix_web",
    "imgtool",
    "into_map_demo",
    "logic_gates",
    "macro_map",
    "my_app",
    "my_lib",
    "rust_from_c",
    "slog_demo",
    "super_player",
    "user_auth",
    "xtnet"
]

