[package]
name = "linksnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
bytes = "1.4.0"
chrono = "0.4.24"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
url = "2.3.1"
